updated to newgem

--- a/website/index.html
+++ b/website/index.html
@@ -1,119 +1,11 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
-  <link rel="stylesheet" href="stylesheets/screen.css" type="text/css" media="screen" />
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <title>
-      ActiveSms
-  </title>
-  <script src="javascripts/rounded_corners_lite.inc.js" type="text/javascript"></script>
-<style>
-
-</style>
-  <script type="text/javascript">
-    window.onload = function() {
-      settings = {
-          tl: { radius: 10 },
-          tr: { radius: 10 },
-          bl: { radius: 10 },
-          br: { radius: 10 },
-          antiAlias: true,
-          autoPad: true,
-          validTags: ["div"]
-      }
-      var versionBox = new curvyCorners(settings, document.getElementById("version"));
-      versionBox.applyCornersToAll();
-    }
-  </script>
-</head>
-<body>
-<div id="main">
-
-    <h1>ActiveSms</h1>
-    <div id="version" class="clickable" onclick='document.location = "http://rubyforge.org/projects/activesms"; return false'>
-      <p>Get Version</p>
-      <a href="http://rubyforge.org/projects/activesms" class="numbers">0.6.0</a>
-    </div>
-    <h2>What</h2>
-
-
-	<p>Active <span class="caps">SMS</span> is a framework for creating and sending <span class="caps">SMS</span> messages.</p>
-
-
-	<h2>Installing</h2>
-
-
-<pre syntax="ruby">sudo gem install activesms</pre>
-
-	<h2>Demonstration of usage</h2>
-
-
-	<p><span class="caps">TBD</span>.</p>
-
-
-	<h2><span class="caps">API</span> Documentation</h2>
-
-
-	<p>Check out the <a href="http://activesms.rubyforge.org/rdoc/">rdocs.</a></p>
-
-
-	<h2>Supported Gateways</h2>
-
-
-	<p>Active <span class="caps">SMS</span> will require a valid account from a third party <span class="caps">SMS</span> gateway to
-send or receive <span class="caps">SMS</span> messages.  The following gateways are currently supported:</p>
-
-
-	<ul>
-	<li>BulkSMS[http://www.bulksms.com]</li>
-		<li>Clickatell[http://www.clickatell.com]</li>
-		<li>Simplewire[http://www.simplewire.com] (requires jruby)</li>
-	</ul>
-
-
-	<p>Not all features are supported by all gateways.</p>
-
-
-	<h3>Simplewire Configuration</h3>
-
-
-	<ul>
-	<li>Make sure you are using jruby</li>
-		<li>Make sure swsms.jar is in your classpath (Download at: <a href="http://www.simplewire.com/developers/sdk/java/">http://www.simplewire.com/developers/sdk/java/</a>)</li>
-		<li>Add the following configuration code to the rails environment.</li>
-	</ul>
-
-
-<pre syntax="ruby">
-ActiveSms::Base.establish_connection(
-     :adapter  =&gt; "simplewire",
-     :subscriber_id =&gt; "id",
-     :subscriber_password =&gt; "password" 
-   )
-
-</pre>
-
-	<h2>Forum</h2>
-
-
-	<p><a href="http://rubyforge.org/forum/?group_id=2923">http://rubyforge.org/forum/?group_id=2923</a></p>
-
-
-	<h2>License</h2>
-
-
-	<p>This code is free to use under the terms of the <span class="caps">MIT</span> license.</p>
-
-
-	<h2>Support</h2>
-
-
-	<p>You can find the Active <span class="caps">SMS</span> RubyForge page at <a href="http://rubyforge.org/projects/activesms">http://rubyforge.org/projects/activesms</a>.</p>
-
-</div>
-
-<!-- insert site tracking codes here, like Google Urchin -->
-
-</body>
+<html>
+	<head>
+		<meta http-equiv="Content-type" content="text/html; charset=utf-8">
+		<title>test</title>
+		
+	</head>
+	<body id="body">
+		<p>This page has not yet been created for RubyGem <code>test</code></p>
+		<p>To the developer: To generate it, update website/index.txt and run the rake task <code>website</code> to generate this <code>index.html</code> file.</p>
+	</body>
 </html>
